[package]
name = "LocalLLM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#llama_cpp_rs = {git = "https://github.com/ICYPhoenix7/rust-llama.cpp", version = "0.3.0", features = ["cuda"] }


dirs = "5.0.1"
llama_cpp_rs = "0.3.0"
rand = "0.8.5"


